# work-site

./: .gitignore  .hgignore  .uEdition.answers  Dockerfile  LICENSE  Pipfile  build.sh  dodo.py  gulpfile.js  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  theme-gulpfile.js  uEdition.yml
content/articles/: metrics_may_work.rst  qa_death.rst
content/cv/: acm-gis-best-poster-presentation.rst  bakk-techn.rst  cardiff-associate-lecturer.rst  cardiff-ra.rst  cardiff-training.rst  cardiff-tripod.rst  cv.json  dh-summer-school.rst  dipl-ing.rst  edge-hill.rst  edgehill-training.rst  europeana-innovation.rst  europeana-tech-hackathon.rst  iconference-best-paper.rst  klagenfurt-associate-lecturer.rst  klagenfurt-harmonisa.rst  klagenfurt-history.rst  klagenfurt-zid.rst  pgcert.rst  phd.rst  self-employed.rst  sheffield-paths.rst  sheffield-promise.rst  sheffield-training.rst  the-national-archives.rst  tpdl-2013-best-poster.rst  tpdl-2017-best-paper.rst
content/pages/: cv.rst  presentations.rst  projects.rst  publications.rst  thoughts.rst  welcome.rst
content/pages/projects/: digital-museum-map.rst  ess.rst  (+6 more)
content/publications/: mhall.bib
de/: index.md
docker/: 99-fastcgi.sh  99-update-content.sh  default.conf
en/: index.md
theme/src/: _settings.scss  app.scss
theme/templates/: archives.html  article.html  article_brief_inc.html  articles.html  author.html  authors.html  base.html  categories.html  category.html  cv.html  index.html  page.html  publication.html  publications.html  tag.html  tags.html
(+3 files in other folders)
