[tool.poetry]
name = "work-site"
version = "1.0.0"
description = "Sources for www.room3b.eu"
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "CC-BY-4.0"

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.6.0"
pelican_bibtex = { git = "https://github.com/scmmmh/pelican-bibtex.git" }
pelican_page_hierarchy = { git = "https://github.com/scmmmh/pelican-page-hierarchy.git" }
pelican_page_order = { git = "https://github.com/scmmmh/pelican-page-order.git" }
pelican_cv = { git = "https://github.com/scmmmh/pelican-cv.git" }
doit = "^0.34.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
